NXP-10878: Add background in asset list, fix text alignment

--- a/nuxeo-asset-browser-theme/src/main/resources/themes/css/nuxeo_dam_specific.css
+++ b/nuxeo-asset-browser-theme/src/main/resources/themes/css/nuxeo_dam_specific.css
@@ -51,11 +51,13 @@ author: lkemen@nuxeo.com
   font-size: .9em }
 
 .bubbleBox {
+  background-color: #fff;
   cursor: pointer;
   display: inline-block;
   font-size: .9em;
   margin: 0 .3em 1em;
   min-height: 170px;
+  text-align: left;
   vertical-align: top;
   width: 128px }
 
